--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文章页面</title>
+    <title>呆呆团民主制条例</title>
     <style>
         :root {
             --bg-gradient: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
@@ -153,9 +153,15 @@
     <div class="container">
         <div class="content-wrapper">
             <div class="content">
-                <h1>文章界面</h1>
+                <h1>呆呆团民主制条例</h1>
                 <p></p>
                 <p>在这里插入你已经处理好的文章代码，请先删除这里的文字内容。这是示例图片：[image:https://raw.githubusercontent.com/FDO-page/test/main/IMG_1292.jpeg]</p>
+                <ul>
+                <li>参观世界最大的泡泡糖博物馆</li>
+                <li>体验云朵主题公园（所有设施都是软绵绵的）</li>
+                <li>入住树屋酒店，与小动物们成为邻居</li>
+            </ul>
+
             </div>
         </div>
     </div>
