--- a/index.html
+++ b/index.html
@@ -161,9 +161,25 @@
 第一条：呆呆团民主制适用于以下事项：成员加入与退出、职务变更、资格剥夺、总统公投与罢免、条例或宪法修订、分局管理。
 
 </li>
-                <li>体验云朵主题公园（所有设施都是软绵绵的）</li>
-                <li>入住树屋酒店，与小动物们成为邻居</li>
-                <li>入住树屋酒店，与小动物们成为邻居</li>
+                <li>第二条：呆呆国成员通过投票行使权力。投票参与者包括局长及常务委员会成员。除总统有两票权重外，其他人只有一票权重。
+</li>
+                <li>第三条：呆呆团内进行公开投票，持续时间最长不超过三天，三天后进行结算。</li>
+                <li>第四条：投票结果由国务院总理、总统、FDO局长或副总统宣布。
+</li>
+                <li>第五条：在总统公投时，总统候选人不得参与自己或他人的公投。每位总统候选人最多可提名三人，上任总统不得再次提名。
+</li>
+                <li>第六条：所有方案的投票应保持全程透明与公开，手机部与手表部应互相转发以确保信息畅通。
+</li>
+                <li>第七条：投反对票无需陈述理由。如发现有被迫投票或贿赂投票的情况，可上诉至司法机构进行审判。
+</li>
+                <li>第八条：投票方案通过人数必须超过一半（≥7人）。若通过人数与反对票持平，则方案不予通过。如方案违反呆呆国宪法，则需立即下架或整改。
+</li>
+                <li>第九条：宪法的修改必须得到三分之二以上（＞10人）的同意，并经过司法部内部投票。若司法部投票结果同意且满足人数条件，则宪法修改生效。
+</li>
+                <li>第十条：加入的成员不得是被列入敌对势力的人员。加入成员零反对则两票通过，一反对需三票，二反对需四票，三反对需五票，四反对不予通过。同时需经过司法部审核。</li>
+                <p>声明</p>
+                <li>该条例是在FDO的基础上修订与完善，不约束FDO局内部。该条例可能会更改，如有提议请联系我们
+</li>
             </ul>
 
             </div>
