--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="content">
                 <h1>呆呆团民主制条例</h1>
                 <p></p>
-                <p>为了征求广大群众的意见并满足多方面的要求，我们制定了民主投票流程与规则，以完善我们的民主制度并确保投票过程的严谨性。以下是我们的政策方案：[image:https://raw.githubusercontent.com/FDO-page/test/main/IMG_1292.jpeg]</p>
+                <p>为了征求广大群众的意见并满足多方面的要求，我们制定了民主投票流程与规则，以完善我们的民主制度并确保投票过程的严谨性。以下是我们的政策方案：</p>
                 <ul>
                 <li>
 第一条：呆呆团民主制适用于以下事项：成员加入与退出、职务变更、资格剥夺、总统公投与罢免、条例或宪法修订、分局管理。
